--- a/082922/Makefile
+++ b/082922/Makefile
@@ -1,13 +1,10 @@
 # Copyright (C) 2022 Richard Hughes <richard@hughsie.com>
 
-VENDOR=caldigit
-PROJECT_NAME=ts4
-VERSION=082922
-OBJECTS=						\
-	TS4-combind-082922-secure-Cus-33.bin		\
-	com.caldigit.ts4.pd.metainfo.xml
+VENDOR=CalDigit
+VERSION=TS4-combind-082922-secure-Cus-33
+OBJECTS=$(VERSION).bin com.caldigit.ts4.pd.metainfo.xml
 
-all: $(VENDOR)-$(PROJECT_NAME)-$(VERSION).cab
+all: $(VENDOR)-$(VERSION).cab
 
 clean:
 	rm *.cab
